<resources>
    <string name="app_name">Bluetooth Termal Print</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_null">null</string>
    <string name="title_toko">TOKO</string>
    <string name="title_store">Store</string>
    <string name="title_store_name">Store name</string>
    <string name="foo">Lorem Ipsum</string>
    <string name="title_address">Address</string>
    <string name="title_date">Date</string>
    <string name="title_transaction_id">Transaction ID</string>
    <string name="title_cart_list">Cart List</string>
    <string name="title_print">Print</string>
    <string name="title_no_data_found">No Data Found!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_product">Product</string>
    <string name="title_perangkat_terpasang">Perangkat Terpasang</string>
    <string name="title_perangkat_lain_tersedia">Perangkat Lain Tersedia</string>
    <string name="title_cari_perangkat">Cari Perangkat</string>
</resources>