<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:padding="8dp"
        android:fontFamily="@font/regular"
        android:text="@string/title_perangkat_terpasang"
        android:textColor="#fff"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:layout_weight="1"
        android:drawSelectorOnTop="true"/>

    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:fontFamily="@font/regular"
        android:padding="8dp"
        android:text="@string/title_perangkat_lain_tersedia"
        android:textColor="#fff"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_cari_perangkat"
        android:fontFamily="@font/regular"
        android:background="@android:color/darker_gray"/>

</LinearLayout>
